--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <body>
         <div id="header">
+            <img src="IMAGES/profile-cercle.png" alt="profile">
             <div class="container">
                 <nav>
                     <h1 class="falandy">FALANDY JEAN</h1>
