adding link of my github profile

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
                             <a href="https://twitter.com/jfand509?t=vwOmRBPei--nAi0624kKDg&s=08"><i class="fa-brands fa-twitter"></i></a>
                             <a href="https://instagram.com/falandyjean?igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/falandy-jean-148b8a223"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="Https://www.github.com/FalandyJEAN"><i class="fa-brands fa-github"></i></a>
                         </div>
                         <a href="IMAGES/Mon CV.pdf" download class="btn btn2">Telecharger mon CV</a>
                     </div>
