addind white color into the blog box

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <form name="submit-to-google-sheet">
                             <input type="text" name="Nom" placeholder="Nom" required>
                             <input type="text" name="Prenom" placeholder="Prenom" required>
-                            <input type="email" name="Email" placeholder="Adresse mail" required>
+                            <input type="email" name="Email" placeholder="Adresse e-mail" required>
                             <textarea name="Message"  rows="6" placeholder="Votre Message"></textarea>
                             <button type="submit" class="btn btn2" onclick="alert('Message envoye avec succes!')">Envoyer</button>
                         </form>
