--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-        <link rel="shortcut icon" href="IMAGES/clavier.jpg">
+        <link rel="shortcut icon" href="IMAGES/letterF.png">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <script src="https://kit.fontawesome.com/16d512547d.js" crossorigin="anonymous"></script>
