--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     <div class="col-md-6">
                         <img src="IMAGES/IMG_9261.jpg" class="img-fluid rounded" alt="Photo de profil" id="profile">
                     </div>
-                    <div class="col-md-6 data-aos='fade-up'">
-                        <h1 class="sous-titre mt-4 mt-md-0">A Propos de Moi</h1>
-                        <p id="texte">
+                    <div class="col-md-6">
+                        <h1 class="sous-titre mt-4 mt-md-0 data-aos='fade-up'">A Propos de Moi</h1>
+                        <p id="texte" data-aos='fade-up'>
                             Salut, je suis Falandy, passionné par le développement web et l'utilisation de plateformes no code. Je suis convaincu du pouvoir transformateur de la technologie. 
                             À travers mes projets, je m'efforce de repousser les limites pour créer des solutions innovantes. <br>
 
@@ -97,18 +97,18 @@
         <div id="service">
             <div class="container">
                 <h1 class="sous-titre data-aos='fade-up'">Mes Services</h1>
-                <div class="services-list data-aos='fade-up'">
-                    <div>
+                <div class="services-list">
+                    <div data-aos='fade-up'>
                         <i class="fa-solid fa-code"></i>
                         <h2>Creation de Site Web</h2>
                         <p>Je crée des sites web uniques et personnalisés en fonction des besoins et des objectifs de mes clients. Chaque site est conçu avec une attention particulière aux détails, à l'esthétique et à l'expérience utilisateur.</p>
                     </div>
 
-                    <div>
+                    <div data-aos='fade-up'>
                         <i class="fa-solid fa-check"></i>
                         <h2>Optimisation des Performances Web</h2>
                         <p>Mon expertise réside dans l'optimisation des performances de votre présence en ligne. Je m'engage à accélérer le chargement de vos pages web, à améliorer l'efficacité de vos applications et à garantir une expérience utilisateur fluide. Cela implique l'analyse approfondie des performances, la mise en cache intelligente, et l'optimisation du code pour des temps de chargement rapides, contribuant ainsi à fidéliser vos utilisateurs.</p>
-                    </div>
+                    </div data-aos='fade-up'>
                     
 
                     <div hidden>
@@ -226,10 +226,10 @@
 
 <!-------------------------------------------------------------------------------contact--------------------------------------------------------------------------------->
         <div id="contact1">
-            <div class="container data-aos='fade-up'">
+            <div class="container">
                 <div class="row">
                     <div class="contact-left">
-                        <h1 class="sous-titre">Contactez-Moi</h1>
+                        <h1 class="sous-titre data-aos='fade-up'">Contactez-Moi</h1>
                         <p><i class="fa-solid fa-paper-plane"></i><a href="mailto:falandyjean@gmail.com">Falandyjean@gmail.com</a></p>
                         <p><i class="fa-solid fa-square-phone"></i>+509 4664-6020</p>
                         <div class="social-icons">
