--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="JS/bootstrap.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/16d512547d.js" crossorigin="anonymous"></script>
 </head>
@@ -75,7 +75,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="IMAGES/IMG_9261.jpg" class="img-fluid rounded" alt="Photo de profil" id="profile">
+                        <img src="IMAGES/IMG_9261.jpg" class="img-fluid rounded data-aos='fade-up'" alt="Photo de profil" id="profile">
                     </div>
                     <div class="col-md-6">
                         <h1 class="sous-titre mt-4 mt-md-0 data-aos='fade-up'">A Propos de Moi</h1>
@@ -96,7 +96,7 @@
 <!----------------------------------------------------------------------------Services----------------------------------------------------------------------------------->
         <div id="service">
             <div class="container">
-                <h1 class="sous-titre data-aos='fade-up'">Mes Services</h1>
+                <h1 class="sous-titre">Mes Services</h1>
                 <div class="services-list">
                     <div data-aos='fade-up'>
                         <i class="fa-solid fa-code"></i>
@@ -107,11 +107,11 @@
                     <div data-aos='fade-up'>
                         <i class="fa-solid fa-check"></i>
                         <h2>Optimisation des Performances Web</h2>
-                        <p>Mon expertise réside dans l'optimisation des performances de votre présence en ligne. Je m'engage à accélérer le chargement de vos pages web, à améliorer l'efficacité de vos applications et à garantir une expérience utilisateur fluide. Cela implique l'analyse approfondie des performances, la mise en cache intelligente, et l'optimisation du code pour des temps de chargement rapides, contribuant ainsi à fidéliser vos utilisateurs.</p>
-                    </div data-aos='fade-up'>
+                        <p>Mon expertise réside dans l'optimisation des performances de votre présence en ligne. Je m'engage à accélérer le chargement de vos pages web, à améliorer l'efficacité de vos applications et à garantir une expérience utilisateur fluide.</p>
+                    </div>
                     
 
-                    <div hidden>
+                    <div data-aos='fade-up'>
                         <i class="fa-brands fa-app-store"></i>
                         <h2>Creation d'Application Mobile</h2>
                         <p>Je crée des applications mobiles personnalisées pour les plateformes Android et iOS. En travaillant en étroite collaboration avec vous, je transforme vos idées en applications mobiles fonctionnelles et esthétiques.</p>
