--- a/index.html
+++ b/index.html
@@ -144,6 +144,22 @@
                     </div>
 
                     <div class="Blog">
+                        <img src="IMAGES/azertype.png" alt="interface de AzerType">
+                        <div class="layer">
+                            <h2>AzerType</h2>
+                            <a href="https://falandyjean.github.io/AzerType/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="Blog">
+                        <img src="IMAGES/scketch.png" alt="interface de Etch-A-Scketch">
+                        <div class="layer">
+                            <h2>Etch-A-Sketch</h2>
+                            <a href="https://falandyjean.github.io/Etch-A-Sketch/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="Blog">
                         <img src="IMAGES/riva.jpg">
                         <div class="layer">
                             <h2>FineTech</h2>
