mwen santre text about yo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col-md-6">
                         <img src="IMAGES/IMG_9261.jpg" class="img-fluid rounded data-aos='fade-up'" alt="Photo de profil" id="profile">
                     </div>
-                    <div class="col-md-6" data-aos='fade-left' data-aos-duration = "1000">
+                    <div class="col-md-6" data-aos='fade-left' data-aos-duration = "1000" id="about-right">
                         <h1 class="sous-titre mt-4 mt-md-0">A Propos de Moi</h1>
                         <p id="texte">
                             Salut, je suis Falandy, passionné par le développement web et l'utilisation de plateformes no code. Je suis convaincu du pouvoir transformateur de la technologie. 
