--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
 
                                 <p class="h4"><b><i class="fa fa-cogs fa-fw mr-2 text-teal"></i>Compétences</b></p>
 
-                                <div class="Skill-item">
+                                <div class="Skill-item" data-aos='fade-right' data-aos-duration="1100">
                                     <p>HTML/CSS</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                                     </div>
                                 </div>
 
-                                <div class="Skill-item">
+                                <div class="Skill-item" data-aos='fade-right' data-aos-duration="1100">
                                     <p>JavaScript</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                                     </div>
                                 </div>
 
-                                <div class="Skill-item">
+                                <div class="Skill-item" data-aos='fade-right' data-aos-duration="1100">
                                     <p>MongoDB</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                                     </div>
                                 </div>
 
-                                <div class="Skill-item">
+                                <div class="Skill-item" data-aos='fade-right' data-aos-duration="1100">
                                     <p>Express.JS</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
@@ -163,11 +163,6 @@
                                 <hr>
                             </div>
 
-                            <div data-aos='fade-right' data-aos-duration="1100">
-                                <h5 class="h6"><b>Graphic Designer / designsomething.com</b></h5>
-                                <h6 class="text-teal"><i class="fa fa-calendar fa-fw mr-1"></i>Jun 2010 - Mar 2012</h6>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
-                            </div>
                         </div>
                     </div>
                 </div>
