mwen retire data-aos ki te nan section competences ak experience an yo

--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
 
                                 <p class="h4"><b><i class="fa fa-cogs fa-fw mr-2 text-teal"></i>Compétences</b></p>
 
-                                <div class="Skill-item" data-aos='fade-up' data-aos-duration="1100">
+                                <div class="Skill-item">
                                     <p>HTML/CSS</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                                     </div>
                                 </div>
 
-                                <div class="Skill-item" data-aos='fade-up' data-aos-duration="1100">
+                                <div class="Skill-item">
                                     <p>JavaScript</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                                     </div>
                                 </div>
 
-                                <div class="Skill-item" data-aos='fade-up' data-aos-duration="1100">
+                                <div class="Skill-item">
                                     <p>MongoDB</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                                     </div>
                                 </div>
 
-                                <div class="Skill-item" data-aos='fade-up' data-aos-duration="1100">
+                                <div class="Skill-item">
                                     <p>Express.JS</p>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
@@ -149,14 +149,14 @@
                         <div class="card-body">
                             <h2 class="h4"><i class="fa fa-suitcase fa-fw mr-2 text-teal"></i>Expérience Professionnelle</h2>
 
-                            <div data-aos='fade-right' data-aos-duration="1100">
+                            <div>
                                 <h5 class="h6"><b>Coordinnateur Startups Hult - Hult Prize ESIH</b></h5>
                                 <h6 class="text-teal"><i class="fa fa-calendar fa-fw mr-1"></i>Octobre 2023 - <span class="badge badge-pill badge-teal">A nos jours</span></h6>
                                 <p>Mon rôle est d'accompagner les entrepreneurs en termes de communication et de faire en sorte qu'ils vivent la meilleure expérience possible lors de ce concours à l'ESIH !</p>
                                 <hr>
                             </div>
 
-                            <div data-aos='fade-right' data-aos-duration="1100">
+                            <div>
                                 <h5 class="h6"><b>Assistant Informatique Stage - Food For The Poor</b></h5>
                                 <h6 class="text-teal"><i class="fa fa-calendar fa-fw mr-1"></i>Juillet 2023 - Septembre 2023</h6>
                                 <p>Support technique · Système de noms de domaine (DNS) · Microsoft Outlook · Service client · Développement web · Gestion des services informatiques</p>
